# myrng

./: AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  index.html  myrngMT.pc.in  myrngWELL.pc.in  params.json
myrng/: MTEngine.h  WELLEngine.h  myrng.h  myrngMT.h  myrngWELL.h
src/: MTEngine.cpp  MTEngine.h  myrng.h  myrngMT.cpp  util.h
test/: Makefile  RNGTests.h  testMT.cpp  testWELL.cpp
